--- a/notes-app/index.html
+++ b/notes-app/index.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
 
 <html>
-  <head>
-    <script src="notes-app.js"></script>
-  </head>
+  <head> </head>
   <body>
-    <h1>Some other text</h1>
+    <h1>Notes App</h1>
     <h2>Take notes and never forget</h2>
-    <p>This application is created by bharat makwana</p>
+    <input id="search-text" type="text" placeholder="Filter notes" />
+    <select id="filter-by">
+      <option value="byEdited">Sort by last edited</option>
+      <option value="byCreated">Sort by recently created</option>
+      <option value="alphabetical">Sort alphabetically</option>
+    </select>
+    <div id="notes"></div>
+    <button id="create-note">Create Note</button>
+    <script src="notes-functions.js"></script>
+    <script src="notes-app.js"></script>
   </body>
 </html>
